kubernetes/apps/default/linkding/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: linkding-external
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`linkding.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        # - name: basicauth
        - name: crowdsec-traefik-bouncer
        - name: ipfilter-cloudflare
        # - name: ipfilter-internal
      services:
        - name: linkding
          namespace: default
          port: 9090
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
